# vibe-cop

./: .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  build.rs
.agents/skills/git-workflow/: SKILL.md
.github/workflows/: build.yml  release.yml
.slopctl/: config.yml  tracker.json  tracker.yml
src/: agent_defaults.rs  bom.rs  cli.rs  config.rs  download_manager.rs  file_tracker.rs  github.rs  lib.rs  llm.rs  main.rs  template_engine.rs  template_engine_v1.rs  template_engine_v2.rs  utils.rs
src/template_manager/: doctor.rs  list.rs  merge.rs  mod.rs  purge.rs  remove.rs  status.rs  update.rs
templates/v2/: templates.yml
templates/v3/: AGENTS.md  rust-coding-conventions.md
templates/v4/: best-practices.md  build-environment.md  c++-coding-conventions.md  c++-editor-config.ini  c-editor-config.ini  c-format-instructions.yml  git-attributes-common.txt  mission-statement.md  rust-editor-config.ini  rust-format-instructions.toml  semantic-versioning.md  swift-coding-conventions.md  swift-format-instructions.json  technology-stack.md  templates.yml
templates/v5/: AGENTS.md  c++-coding-conventions.md  c++-format-instructions.yml  c++-skills-hint.md  c-coding-conventions.md  c-skills-hint.md  cmake-build-commands.md  cmake-skills-hint.md  core-principles.md  git-workflow-conventions.md  git-workflow-summary.md  make-build-commands.md  rust-build-commands.md  rust-skills-hint.md  semantic-versioning-summary.md  swift-build-commands.md  swift-editor-config.ini  swift-skills-hint.md  templates.yml
templates/v5/claude/: CLAUDE.md
(+15 files in other folders)
