[package]
name = "slopctl"
version = "15.4.4"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5"
owo-colors = "4.1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
chrono = "0.4"
sha2 = "0.10"
tempfile = "3.13"
anyhow = "1.0.102"

[dev-dependencies]

[build-dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"

[lints.clippy]
bool_comparison = "allow"
